kotlin/semlang-parser/src/test/semlang/validatorTests/fail/threadedTypes13.sem
// Disallow Lists with threaded parameter types for now
function listTextOut(): ~TextOut {
  Try.assume<~TextOut>(List.get<~TextOut>([]<~TextOut>, Natural."0"))
}
